--- a/styles/home.css
+++ b/styles/home.css
@@ -1,66 +1,249 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Maven Pro', sans-serif;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
-header{
+header {
     background-color: rgb(250, 241, 247);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    position: -webkit-sticky;
+    position: sticky;
+    z-index: 100;
+    top: 0;
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     padding: 0px 1em;
 }
 
-header nav a img{
+header nav a img {
     width: 40%;
-   display: flex;
+    display: flex;
     align-items: center;
 }
 
-ul{
+ul {
     display: flex;
     list-style: none;
-    font-size: 20px;  
-    align-items: center; 
+    font-size: 20px;
+    align-items: center;
 }
 
-li{
-    margin-left: 1em;
+li {
+    margin-left: 2em;
 }
 
 ul li a:hover {
     font-weight: 600;
 }
 
-a{
+a {
     color: #BF1B2C;
-    text-decoration: none; 
+    text-decoration: none;
 }
 
-.banner1{
+.banner1 {
     width: 100vw;
 }
 
-footer{
-    background-color: rgb(250, 241, 247);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);   
-    padding: 2em;
-    
+#artigos {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: space-between;
+    margin-bottom: 3rem;
 }
 
-.rodape{
+h1 {
+    margin: 1% 4% 0%;
+    font-size: 200%;
+    color: #545454
+}
+
+hr {
+    color: #BF1B2C;
+    width: 15%;
+    margin: 1% 4.2% 0;
+    border-top: 6px solid #BF1B2C;
+}
+
+.artigos {
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    padding: 0 2rem;
+    margin-top: 2%;
+    color: #545454
+}
+
+.artigo {
+    display: flex;
+    flex-direction: column;
+    border: 0.2px solid #545454;
+    border-radius: 2px;
+    width: 20rem;
+    margin: 0 2%;
+    font-size: 90%;
+}
+
+.imagem-artigo {
+    width: 100%;
+}
+
+.artigo h2,
+.artigo p {
+    padding: 0.5rem
+}
+
+.data-e-botao {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    height: 100%;
+    width: 100%;
+    padding: 2rem 0.5rem 0.2rem;
+}
+
+.data-e-botao i {
+    color: #BF1B2C
+}
+
+.data-e-botao i time {
+    color: #545454;
+    font-weight: 600;
+    margin-left: 0.4rem;
+}
+
+.data-e-botao a {
+    font-weight: 600;
+}
+
+.ver-todos {
+    background-color: #BF1B2C;
+    color: white;
+    display: inline-block;
+    margin: 0 auto;
+    width: max-content;
+    padding: 1rem;
+    border-radius: 2rem;
+    cursor: pointer;
+    margin-top: 2rem;
+}
+
+#depoimentos {
+    height: 87vh;
+    background-color: #BF1B2C;
+    text-align: center;
+    justify-content: center;
+    color: white;
+}
+
+#depoimentos h3 {
+    padding-top: 8%;
+    padding-bottom: 5%;
+    font-size: 200%;
+}
+
+#depoimentos>div {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#depoimentos img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-left: 10rem;
+    margin-right: 3rem;
+}
+
+.icone-esquerdo {
+    font-size: 400%;
+    margin-right: 3rem;
+}
+
+.texto {
+    margin-bottom: 2rem;
+    font-size: 120%;
+    font-style: oblique;
+}
+
+.icone-direito {
+    font-size: 400%;
+    margin-right: 10rem;
+    margin-left: 3rem;
+}
+
+#icones-slider {
+    margin-top: 8%;
+    font-size: 60%;
+    margin-left: 46%;
+    margin-right: 46%;
+}
+
+.registro{
+    height: 87vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color:#545454;
+}
+
+.registro div{
+    margin-left: 10%;
+}
+
+.registro div h2{
+    margin-bottom: 2rem;
+}
+
+.registro div a{
+    background-color: #BF1B2C;
+    color: white;
+    padding: 1rem;
+    border-radius: 1.2rem;
+}
+
+.registro img{
+    width: 30%;
+    margin-right: 10%;
+}
+
+footer {
+    background-color:#BF1B2C;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 2em;
+}
+
+.rodape {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    color: white;
+} 
+
+/* footer {
+    background-color: rgb(250, 241, 247);
+    padding: 2em;
+
+}
+
+.rodape {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
     color: #BF1B2C;
-   
-}
+} */
 
-.direitos{
+.direitos {
     text-align: center;
     font-weight: 600;
 }
