--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -1,4 +1,4 @@
-{
+*{
     margin: 0;
     padding: 0;
     font-family: 'Maven Pro', sans-serif;
@@ -125,13 +125,80 @@ input[type="submit"]:hover {
 footer {
     background-color:#BF1B2C;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    padding: 2em;
 }
 
-.rodape {
+.container {
+    box-sizing: border-box;
+    max-width: 1200px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 16px;
+}
+
+footer h1 {
+    color: #fff;
+}
+
+footer a {
+    text-decoration: none;
+    color: #fff;
+}
+
+footer ul {
+    list-style: none;
+    font-size: 20px;
+}
+
+footer li {
+    margin-top: 8px;
+}
+
+.navegacao {
+    grid-row: span 2;
+    align-content: start;
+}
+
+.sobre {
+    grid-row: span 1;
+}
+
+.social {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.social ul{
+    grid-column: 2;
+    align-content: start;
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    color: white;
+    gap: 24px;
+}
+
+.social li {
+    flex-wrap: wrap;
+}
+
+.qr-code2{
+    grid-row: span 2;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+}
+
+.qr-code2 img {
+    width: 40%;
+}
+
+.qr-code2 h3 {
+    color: #fff;
+}
+.direitos {
+    text-align: center;
+    padding: 8px;
+    background-color: #fff;
 }
 
