--- a/styles/duvidas.css
+++ b/styles/duvidas.css
@@ -75,7 +75,7 @@ main h1 {
 
 .perguntas button {
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: auto 1fr auto;
     align-items: center;
     gap: 8px;
     cursor: pointer;
@@ -87,12 +87,20 @@ main h1 {
     font-weight: 600;
 }
 
+.perguntas button::before {
+    content: "";
+    display: inline-block;
+    width: 12px;
+    height: 8px;
+    background-color: #BF1B2C;
+}
+
 .perguntas button::after{
     content: "";
     display: inline-block;
     width: 14px;
     height: 6px;
-    background: url(../imagens/seta-abrir.svg);
+    background: url(../assets/imagens/seta-abrir.svg);
     transition: 0.3s;
 }
 
@@ -111,6 +119,138 @@ main h1 {
 
 .perguntas dd {
     padding-top: 16px;
+}
+
+.perguntas .botao {
+    text-decoration: none;
+    color: #fff;
+    background-color: #BF1B2C;
+    padding: 16px;
+    border-radius: 4px;
+    display: inline-block;
+    margin-bottom: 48px;
+}
+
+/*MODAL*/
+.modal {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(77, 77, 77, 0.7);
+    transition: all 0.4s;
+    position: fixed;
+}
+
+.modal:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal h1 {
+    text-align: center;
+    margin: 16px;
+}
+
+.modal p {
+    margin-bottom: 16px;
+}
+
+.modal form {
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: 1fr 1fr;
+    gap:8px;
+}
+
+form label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+form input,
+form textarea {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    resize: none;
+}
+
+form label,
+form input {
+    display: block;
+}
+
+form .nome {
+    grid-column: 1;
+}
+
+form .sobrenome {
+    grid-column: 2;
+}
+
+.nome input,
+.sobrenome input,
+.email input,
+.texto-pergunta textarea {
+    width: 100%;
+}
+
+form .email,
+form .texto-pergunta {
+    grid-column: span 2;
+}
+
+.modal-content {
+    border-radius: 4px;
+    position: relative;
+    width: 500px;
+    max-width: 90%;
+    background: #fff;
+    padding: 1em 2em;
+}
+
+.modal-footer{
+    text-align: right;
+    margin-top: 50px;
+}
+
+
+.modal-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #bfbfbf;
+    text-decoration: none;
+}
+
+.modal-btn-enviar {
+    width: 150px;
+    padding: 10px;
+    text-decoration: none;
+    background-color: #BF1B2C;
+    color: #fff;
+    border-radius: 4px;
+    display: inline-block;
+    text-align: center;
+}
+
+.modal-btn-close {
+    width: 150px;
+    padding: 10px;
+    text-decoration: none;
+    background-color: #bfbfbf;
+    color: #000000;
+    border-radius: 4px;
+    display: inline-block;
+    text-align: center;
 }
 
 /*FOOTER*/
