--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -15,12 +15,12 @@ footer {
     gap: 16px;
 }
 
-.titulo-rodape, .qr-code h3 {
-    color: #fff;
+.navegacao {
+    grid-row: span 2;
+    align-content: start;
 }
 
-footer a {
-    text-decoration: none;
+.titulo-rodape, #compartilhe, footer a{
     color: #fff;
 }
 
@@ -29,23 +29,18 @@ footer a {
     font-size: 20px;
 }
 
-footer li {
+.sobre {
+    grid-row: span 1;
+}
+
+.item-footer {
     margin-top: 8px;
 }
 
-.navegacao {
-    grid-row: span 2;
-    align-content: start;
-}
-
-.navegacao .lista-rodape, .sobre .lista-rodape{
+.navegacao, .navegacao .lista-rodape, .sobre, .sobre .lista-rodape{
     display: flex;
     flex-direction: column;
     align-items: start;
-}
-
-.sobre {
-    grid-row: span 1;
 }
 
 .social {
@@ -60,7 +55,7 @@ footer li {
     gap: 24px;
 }
 
-.social li {
+.item-social {
     flex-wrap: wrap;
 }
 
