--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -1,66 +1,12 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Maven Pro', sans-serif;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-header {
-    background-color: rgb(250, 241, 247);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-    position: -webkit-sticky;
-    position: sticky;
-    z-index: 100;
-    top: 0;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 0px 1em;
-}
-
-header nav a img {
-    width: 40%;
-    display: flex;
-    align-items: center;
-}
-
-ul {
-    display: flex;
-    list-style: none;
-    font-size: 20px;
-    align-items: center;
-}
-
-.itens {
-    margin-left: 2em;
-}
-
-ul li a:hover {
-    font-weight: 600;
-}
-
-a {
-    color: #BF1B2C;
-    text-decoration: none;
-}
 .formulario {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-{
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-}
 
 .titulo {
     text-align: center;
-    background-color: #d9534f;
+    background-color: #BF1B2C;
     color: #fff;
     padding: 20px;
     margin-top: 0;
@@ -73,7 +19,7 @@ form {
     padding: 20px;
     background-color: #fff;
     border-radius: 25px;
-    border:2px solid #d9534f;
+    border:2px solid #BF1B2C;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -106,110 +52,18 @@ textarea {
 
 .imagem {
     width: 500px;
-
-
 }
 
 input[type="submit"] {
-    background-color: #d9534f;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
+    background-color: #BF1B2C;
+    color: white;
+    padding: 1rem 2rem;
+    border-radius: 1.2rem;
+    font-size: 18px;
     cursor: pointer;
-    font-size: 16px;
-    border-radius: 10px;
 }
-
 
 input[type="submit"]:hover {
-    background-color: #c9302c;
-}
-
-footer {
-    background-color:#BF1B2C;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.container {
-    box-sizing: border-box;
-    max-width: 1200px;
-    padding: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 16px;
-}
-
-footer h1 {
-    color: #fff;
-}
-
-footer a {
-    text-decoration: none;
-    color: #fff;
-}
-
-footer .lista {
-    list-style: none;
+    background-color: #BF1B2C;
     font-size: 20px;
 }
-
-footer li {
-    margin-top: 8px;
-}
-
-.navegacao {
-    grid-row: span 2;
-    align-content: start;
-}
-
-.navegacao .lista, .sobre .lista {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-}
-
-.sobre {
-    grid-row: span 1;
-
-}
-
-
-.social {
-    grid-column: 2;
-    grid-row: 2;
-}
-
-.social .lista {
-    grid-column: 2;
-    align-content: start;
-    display: flex;
-    gap: 24px;
-}
-
-.social li {
-    flex-wrap: wrap;
-}
-
-.qr-code2{
-    grid-row: span 2;
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
-}
-
-.qr-code2 img {
-    width: 40%;
-}
-
-.qr-code2 h3 {
-    color: #fff;
-}
-.direitos {
-    text-align: center;
-    padding: 8px;
-    background-color: #fff;
-}
-
