--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -2,6 +2,8 @@
 footer {
     background-color:#BF1B2C;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    position: relative;
+    z-index: 3;
 }
 
 .container {
