--- a/styles/duvidas.css
+++ b/styles/duvidas.css
@@ -1,6 +1,56 @@
 
 /*BODY*/
 
+.dark-mode { filter: invert(100%);
+
+}
+
+
+body.dark{
+    background-color: black;
+    color: white;
+    opacity:inherit;
+    color: transparent;
+    
+
+}
+
+.artigo.dark{
+    fill-opacity: inherit;
+}
+.contanier{
+    position: fixed;
+    top: 10px;
+    right: 10px;
+
+}
+
+label{
+    background-color: rgb(209, 33, 33);
+    border-radius: 30px;
+    display: inline-block;
+    width: 30px;
+    right: 30px;
+    cursor: pointer;
+    user-select: none;
+    transition:background 0.5s liner;
+    
+    
+}
+
+bady.dark label{
+    background-color: white;
+
+}
+ input{
+    visibility: hidden;
+ }
+
+ .perguntas{
+    color:#c03c3c;
+ }
+
+
 main h1 {
     text-align: center;
     background-color: #BF1B2C;
