--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -1,11 +1,8 @@
-
-
 .formulario {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-
 
 .titulo {
     text-align: center;
@@ -26,14 +23,11 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-label {
+main label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-    color:rgb(0, 0, 0);
-
-    
-                                        
+    color:rgb(0, 0, 0);                               
 }
 
 input[type="text"],
@@ -73,29 +67,4 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #BF1B2C;
     font-size: 20px;
-}
-
-body.dark{
-    background-color: black;
-    color: white;
-    opacity:inherit;
-
-}
-
-label[for="btn"]{
-    background-color: rgb(157, 30, 30);
-    border-radius: 30px;
-    display: inline-block;
-    width: 30px;
-    right: 30px;
-    cursor: pointer;
-    user-select: none;
-    transition:background 0.5s liner;
-
-}
-.dark.label1{
-    background-color: white;
-}
-input[type="checkbox"]{
-visibility: hidden;
 }
