--- a/styles/home.css
+++ b/styles/home.css
@@ -1,51 +1,10 @@
+a {
+    text-decoration: none;
+}
+
 .slider img {
     width: 100vw;
 }
-.dark-mode { filter: invert(100%);
-
-}
-
-
-body.dark{
-    background-color: black;
-    color: white;
-    opacity:inherit;
-
-}
-
-.artigo.dark{
-    fill-opacity: inherit;
-}
-.contanier{
-    position: fixed;
-    top: 10px;
-    right: 10px;
-
-}
-
-label{
-    background-color: rgb(209, 33, 33);
-    border-radius: 30px;
-    display: inline-block;
-    width: 30px;
-    right: 30px;
-    cursor: pointer;
-    user-select: none;
-    transition:background 0.5s liner;
-    
-    
-}
-
-.dark label{
-    background-color: white;
-
-}
-
-
- input{
-    visibility: hidden;
- }
-
 
 .btn {
     position: absolute;
