--- a/styles/duvidas.css
+++ b/styles/duvidas.css
@@ -78,7 +78,7 @@ main h1 {
     background-color: #BF1B2C;
     color: white;
     padding: 1rem;
-    border-radius: 4px;
+    border-radius: 1.2rem;
     margin-bottom: 48px;
     text-decoration: none;
 }
@@ -185,22 +185,22 @@ main h1 {
 
 .modal-btn-enviar {
     width: 150px;
-    padding: 10px;
+    padding: 1rem;
     text-decoration: none;
     background-color: #BF1B2C;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 1.2rem;
     display: inline-block;
     text-align: center;
 }
 
 .modal-btn-close {
     width: 150px;
-    padding: 10px;
+    padding: 1rem;
     text-decoration: none;
     background-color: #bfbfbf;
     color: #000000;
-    border-radius: 4px;
+    border-radius: 1.2rem;
     display: inline-block;
     text-align: center;
 }
