--- a/styles/duvidas.css
+++ b/styles/duvidas.css
@@ -1,54 +1,6 @@
-
-/*BODY*/
-
-.dark-mode { filter: invert(100%);
-
+.perguntas {
+    color: #c03c3c;
 }
-
-
-body.dark{
-    background-color: black;
-    color: white;
-    opacity:inherit;
-    color: transparent;
-    
-
-}
-
-.artigo.dark{
-    fill-opacity: inherit;
-}
-.contanier{
-    position: fixed;
-    top: 10px;
-    right: 10px;
-
-}
-
-label{
-    background-color: rgb(209, 33, 33);
-    border-radius: 30px;
-    display: inline-block;
-    width: 30px;
-    right: 30px;
-    cursor: pointer;
-    user-select: none;
-    transition:background 0.5s liner;
-    
-    
-}
-
-bady.dark label{
-    background-color: white;
-
-}
- input{
-    visibility: hidden;
- }
-
- .perguntas{
-    color:#c03c3c;
- }
 
 
 main h1 {
@@ -95,7 +47,7 @@ main h1 {
     background-color: #BF1B2C;
 }
 
-.perguntas button::after{
+.perguntas button::after {
     content: "";
     display: inline-block;
     width: 14px;
@@ -165,7 +117,7 @@ main h1 {
     display: grid;
     justify-content: space-around;
     grid-template-columns: 1fr 1fr;
-    gap:8px;
+    gap: 8px;
 }
 
 form label {
@@ -216,9 +168,9 @@ form .texto-pergunta {
     padding: 1em 2em;
 }
 
-.modal-footer{
+.modal-footer {
     text-align: right;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .modal-close {
@@ -249,4 +201,70 @@ form .texto-pergunta {
     border-radius: 4px;
     display: inline-block;
     text-align: center;
+}
+
+/* Estilos dinâmicos */
+.required-popup::after {
+    content: "*Campo obrigatório";
+    color: #DFDFDF;
+    font-size: .65rem;
+    padding: .2rem .3rem;
+    width: 50%;
+    background-color: #202020;
+}
+
+input.error, textarea.error  {
+    border: solid 2px #992020;
+    background-color: #CCBBBB;
+    color: #662020;
+}
+
+input.correct, textarea.correct {
+    background-color: #BBCCBB;
+    border: solid 2px #206620;
+    color: #206620;
+}
+
+.helper-text {
+    display: none;
+    font-size: .8rem;
+    color: darkred;
+    margin-top: 2px;
+  }
+
+.visible {
+    display: block;
+}
+
+.custom-alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color:#BF1B2C;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 300px;
+    text-align: center;
+    display: none;
+    z-index: 1000;
+}
+
+.custom-alert-content {
+    font-size: 18px;
+}
+
+.custom-alert-show {
+    display: block;
+    animation: fadeIn 0.3s ease-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
